--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html>
+<!-- ICS2O-Unit1-04-HTML-CSS -->
+<html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="My first webpage, with CSS" />
+    <meta name="keywords" content="mths, icd2o" />
+    <meta name="author" content="Mr. Coxall" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>My first webpage, with CSS</title>
   </head>
+
   <body>
-    <p>Paragraph</p>
+    <h1>Style is important</h1>
+    <p>Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style" />
+    <p>
+      <a href="./index2.html">My index2.html page</a>
+    </p>
   </body>
 </html>
